--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API del Sistema de Gestion de Restaurantesgit ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
